--- a/public/config/config.json
+++ b/public/config/config.json
@@ -11,7 +11,7 @@
   "MAX_SUPPLY": 13500,
   "WEI_COST": 75000000000000000,
   "DISPLAY_COST": 2,
-  "GAS_LIMIT": 285000,
+  "GAS_LIMIT": 28500000000,
   "MARKETPLACE": "Opeansea",
   "MARKETPLACE_LINK": "https://opensea.io/collection/thegoldenape",
   "SHOW_BACKGROUND": true
